--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -3,8 +3,9 @@ jmexpander {
 }
 .jsmind {
   position: relative;
-  padding: 20px;
+  padding: 0px 0px 60px 0px;
   height: 100vh;
+  background-color: rgba(251, 245, 224);
 
   &.full {
     position: fixed;
@@ -245,6 +246,9 @@ jmexpander {
   }
 
   .top-bar {
+    height: 60px;
+    width: 100%;
+    background-color: rgba(28, 255, 242,0.1);
     .filter {
       float: left;
 
@@ -380,6 +384,7 @@ jmexpander {
 
     &::-webkit-scrollbar {
       height: 10px;
+      //background-color: rgb(0, 0, 0);
     }
   }
 
