--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -294,6 +294,15 @@ jmexpander {
     background-color: white;
     box-shadow: 0 0 8px 4px rgb(31 35 41 / 10%);
     border-radius: 20px 0 0 20px ;
+
+  }
+  .sideTopic{
+    margin-top: 10px;
+  }
+  .sideBarTop{
+    padding: 20px;
+    width: 100%;
+    height: 100%;
   }
   .sideBarBottom{
     display: flex;
@@ -303,5 +312,13 @@ jmexpander {
     height: 60px;
     position: absolute;
     bottom: 0px;
+  }
+  .sideBar-enter-active{
+    animation: fadeInRight;
+    animation-duration: 0.5s;
+  }
+  .sideBar-leave-active{
+    animation: fadeOutRight;
+    animation-duration: 0.5s;
   }
 }
