--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -2,6 +2,14 @@
 //animation: animate__fadeOutRight; /* referring directly to the animation's @keyframe declaration */
 //animation-duration: 2s; /* don't forget to set a duration! */
 
+//展开原点样式
+jmexpander {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+  margin-top: 5px;
+}
 jmexpander {
   line-height: 8px;
 }
