--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -256,8 +256,9 @@ jmexpander {
     jmnode {
       max-width: unset;
       color: #fff;
-      background-color: #ddd;
-
+      visibility: visible;
+      background-color: rgb(78, 181, 255);
+      color: rgb(255, 255, 255);
       &.selected {
         color: #fff !important;
         border: 1px solid #777;
@@ -278,7 +279,6 @@ jmexpander {
 
   .jsmind-inner {
     overflow: scroll;
-
     &::-webkit-scrollbar {
       height: 10px;
       //background-color: rgb(0, 0, 0);
@@ -321,6 +321,7 @@ jmexpander {
     position: absolute;
     bottom: 0px;
   }
+  //动画效果
   .sideBar-enter-active{
     animation: fadeInRight;
     animation-duration: 0.5s;
