--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -2,6 +2,38 @@
 //animation: animate__fadeOutRight; /* referring directly to the animation's @keyframe declaration */
 //animation-duration: 2s; /* don't forget to set a duration! */
 
+:root {
+  --fixed-width: 300px;
+}
+//滚动条自定义
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #d7ebff;
+}
+.common-flex{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
 //展开原点样式
 jmexpander {
   display: flex;
@@ -165,6 +197,17 @@ jmexpander {
     display: flex;
     align-items: center;
     padding: 10px;
+
+    .story_name{
+      width: 100%;
+      display:flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      color: #ff9cad; /* 设置字体颜色为粉色 */
+      text-shadow: 2px 2px 0px #fff, -2px -2px 0px #fff, 2px -2px 0px #fff, -2px 2px 0px #fff; /* 添加白色描边 */
+    }
     .filter {
       float: left;
 
@@ -330,4 +373,67 @@ jmexpander {
     animation: fadeOutRight;
     animation-duration: 0.5s;
   }
+  .fragment-enter-active{
+       animation: fadeIn;
+       animation-duration: 0.5s;
+     }
+  .fragment-leave-active{
+    animation: fadeOut;
+    animation-duration: 0.5s;
+  }
+  .fragmentContainer{
+    z-index: 999;
+    height: 80%;
+    width: 50%;
+    opacity: 0.98;
+    background-color: #f7fff3;
+    position: fixed;
+    top: 50%;
+    right: calc((100% - var(--fixed-width)) / 2 + var(--fixed-width));
+    transform: translate(55%, -50%);
+    border-radius: 20px;
+    display: flex;
+    justify-content: flex-start;
+    //align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
+    background-image: url('../../../image/sakura.jpg');
+    background-size: auto 100%;
+
+    .cover {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      padding: 0px 20px 0px 20px;
+      background: rgba(255, 255, 255, 0.8);
+      .fragmentTop{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        height:10%;
+        width: 100%;
+        font-size: 20px;
+        color: #36002b;
+        text-shadow: 1px 1px 0px #fff, -1px -1px 0px #fff, 1px -1px 0px #fff, -1px 1px 0px #fff; /* 添加白色描边 */
+      }
+      .fragmentContent{
+        font-size:14px;
+        text-space: 2px;
+        line-height: 22px;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        color: #0a001f;
+        max-height: calc(90% - 25px); /* 设置最大高度，超出时将出现垂直滚动条 */
+        overflow-y:auto; /* 允许垂直滚动 */
+      }
+    }
+
+
+  }
+
 }
