--- a/public/jsmind/style/jsmind.css
+++ b/public/jsmind/style/jsmind.css
@@ -23,14 +23,62 @@ canvas{position:absolute;z-index:1;}
 
 /* z-index:2 */
 jmnodes{position:absolute;z-index:2;background-color:rgba(0,0,0,0);}/*background color is necessary*/
-jmnode{position:absolute;cursor:default;max-width:400px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+jmnode{
+    position:absolute;
+    cursor:default;
+    max-width:200px;
+    min-width: 100px;
+    text-align: center;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
 jmexpander{position:absolute;width:11px;height:11px;display:block;overflow:hidden;line-height:12px;font-size:12px;text-align:center;border-radius:6px;border-width:1px;border-style:solid;cursor:pointer;}
 
 /* default theme */
-jmnode{padding:10px;background-color:#fff;color:#333;border-radius:5px;box-shadow:1px 1px 1px #666;font:16px/1.125 Verdana,Arial,Helvetica,sans-serif;}
-jmnode:hover{box-shadow:2px 2px 8px #000;background-color:#ebebeb;color:#333;}
-jmnode.selected{background-color:#11f;color:#fff;box-shadow:2px 2px 8px #000;}
-jmnode.root{font-size:24px;}
+jmnode{
+    padding:14.5px;
+    background-color:#fff;
+    color:#333;
+    border-radius:5px;
+    box-shadow:1px 1px 1px #666;
+    font:16px/1.125 Verdana,Arial,Helvetica,sans-serif;
+}
+jmnode:hover{
+    box-shadow:2px 2px 8px #000;
+    background-color:white;
+    color:#333;;
+}
+jmnode:hover::before {
+    content: attr(data-content);
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    color: #6e6e6e;
+    font-size: 12px;
+    text-align: center;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    animation: zoomIn;
+    animation-duration: 0.5s;
+}
+
+
+
+jmnode.selected{background-color: #ff11c7;color:#fff;box-shadow:2px 2px 8px #000;}
+jmnode.root{
+    font-size:24px;
+    padding: 10px;
+}
 jmexpander{border-color:gray;}
 jmexpander:hover{border-color:#000;}
 
