--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -4213,11 +4213,6 @@ a.thumbnail.active,a.thumbnail:focus,a.thumbnail:hover {
   position: relative
 }
 
-.carousel-inner {
-  overflow: hidden;
-  width: 100%
-}
-
 .carousel-inner>.item {
   display: none;
   position: relative;
@@ -18090,7 +18085,7 @@ body {
 
 .index-banner {
   position: relative;
-  margin-top: 125px;
+  margin-top: 20px;
   height: 360px
 }
 
@@ -18126,16 +18121,14 @@ body {
 .slide-recommend {
   float: left;
   max-width: 100%;
-  border-radius: 5px
+  border-radius: 5px;
+  position:relative;
+  width:560px
 }
 
 .carousel-control.left,.carousel-control.right {
   background: none;
   z-index: 14
-}
-
-.left-banner {
-
 }
 
 .left-banner,.right-banner {
@@ -18160,10 +18153,6 @@ body {
   content: ""
 }
 
-.carousel-inner {
-  position: relative
-}
-
 .carousel-inner>.item {
   transition: none
 }
@@ -18179,8 +18168,10 @@ body {
 
 #carousel-banner,#carousel-banner .carousel-inner>.item>img {
   width: 100%;
-  height: 360px;
-  border-radius: 10px
+  height: 315px;
+  border-radius: 10px;
+  display: block;
+  object-fit: cover;
 }
 
 @media (max-width: 1399px) {
@@ -18269,9 +18260,12 @@ body {
 }
 
 .user-center {
-  float: right;
+  float: left;
   width: 270px;
-  height: 100%
+  height: 100%;
+  position: relative;
+  margin-left: 15px;
+  flex-grow: 1;
 }
 
 .user-center .be-come-create {
@@ -18305,7 +18299,6 @@ body {
 }
 
 .user-center .rules-notice {
-  margin-top: 40px;
   border: 1px solid #eee;
   border-radius: 10px;
   height: 240px
@@ -18319,7 +18312,9 @@ body {
 
 .user-center .rules-notice .rules-list {
   position: relative;
-  height: 70px
+  height: 70px;
+  margin: 15px 25px;
+  font-size: 22px;
 }
 
 .user-center .rules-notice .rules-list ul {
@@ -20373,12 +20368,6 @@ body {
 
 }
 
-.new-l-side {
-  position: relative;
-  float: left;
-  width: 870px
-}
-
 @media (max-width: 1399px) {
   .new-l-side {
     width:690px
@@ -20386,9 +20375,9 @@ body {
 }
 
 .new-r-side {
-  position: relative;
-  float: right;
-  width: 270px
+  position:relative;
+  float:right;
+  width:270px;
 }
 
 .work-list {
@@ -22967,7 +22956,7 @@ body {
 
 .container {
   position: relative;
-  padding: 0
+  padding: 0;
 }
 
 .auth-login,.auth-register {
@@ -24233,104 +24222,55 @@ ul.order-list li a.order-second.show_choose,ul.order-list li a.order-second:hove
   width: 100%;
   min-width:1000px;
   min-height:155px;
-  height:9.375vw;
-  max-height:240px;
+  height:200px;
+  max-height:300px;
   background-color:#e3e5e7;
   background-position:center 0;
   background-size:cover;
+  overflow: hidden;
   background-repeat:no-repeat
 }
 
-.v-img{position:relative;display:inline-block;line-height:1;width:100%;height:100%;vertical-align:middle;background-color:var(--graph_bg_regular)}
-
-.banner-img{position:absolute;object-fit:cover}
-
-/*.root {
-  cursor: default;
-  line-height: 1.5;
-  tab-size: 4;
-  -webkit-tap-highlight-color: transparent;
-  word-break: break-word;
-  font-family: Open Sans,system-ui;
-  --vh: 4.14px;
-  font-weight: 400;
-  font-size: 14px;
-  color: #191b26;
-  position: relative;
-!*  background-size: cover;
-  background-position: center top;
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  background-image: url(https://pic4.zhimg.com/v2-666eb28ba8e686a26ae7295cd6a2a47a_r.jpg);*!
-}*/
-
-/*.header__banner {
-  --layout-padding: 60px;
-  --navbar-bounds-padding: 10%;
-  --home-max-width-override: 1440px;
-  --navbar-height: 50px;
-  text-align: left;
-  font-size: 14px;
-  line-height: 1.6;
-  -webkit-text-size-adjust: 100%;
-  font-weight: 400;
-  color: var(--text1);
-  box-sizing: border-box;
-  padding: 0;
-  position: relative;
-  z-index: 0;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  min-width: 1000px;
-  min-height: 155px;
-  height: 9.375vw;
-  max-height: 240px;
-  background-color: #e3e5e7;
-  background-position: center 0;
-  background-size: cover;
-  background-repeat: no-repeat;
+.v-img{
+  position:relative;
+  display:inline-block;
+  line-height:1;
+  width:100%;
+  height:100%;
+  vertical-align:middle;
+  background-color:var(--graph_bg_regular)
 }
 
-.header-banner-img {
-  --layout-padding: 60px;
-  --navbar-bounds-padding: 10%;
-  --home-max-width-override: 1440px;
-  --navbar-height: 50px;
-  text-align: left;
-  font-size: 14px;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
-  font-family: PingFang SC,HarmonyOS_Regular,Helvetica Neue,Microsoft YaHei,sans-serif!important;
-  font-weight: 400;
-  color: var(--text1);
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  line-height: 1;
-  width: 100%;
-  height: 100%;
-  vertical-align: middle;
-  background-color: var(--graph_bg_regular);
-  position: absolute;
-  object-fit: cover;
-}*/
-
-.vsc-initialized {
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  padding: 0;
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  margin: 0;
-  min-width: 990px!important;
-  font-family: SF Pro SC,HanHei SC,SF Pro Text,PingFangSC-Regular,HelveticaNeue-Light,PingFang SC,Helvetica Neue Light,Helvetica Neue,Helvetica,Microsoft YaHei,Arial,sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+.banner-img{
+  position:absolute;
+  object-fit:cover
 }
+
+.slide-recommend{
+  float:left;
+  max-width:100%;
+  border-radius:5px
+}
+
+.new-l-side{
+  position:relative;
+  float:left;
+  width:870px
+}
+
+.carousel-inner{
+  overflow:hidden;
+  width:100%;
+}
+
+.carousel-caption{
+  top:0;
+  left:0;
+  padding:0;
+  border-radius:10px;
+  width:100%;
+  height:auto;
+  object-fit: contain;
+}
+
 
