--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -380,6 +380,42 @@ jmexpander {
       line-height: 20px;
       color: #fff;
     }
+    .likeAndCollection {
+      width: 100%;
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+    .checkLike{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      width: 30%;
+      height: 30px;
+      font-size: 14px;
+      background-color: #ff9e6a;
+    }
+    .likeIcon{
+      width: 20px;
+      height: 20px;
+      color: red;
+    }
+    .collectIcon{
+      font-size: 25px;
+      color: #ffb700;
+    }
+    .collect{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      width: 30%;
+      height: 30px;
+      background-color: #fff194;
+
+    }
     .backToFragment{
       margin-top: 20px;
       padding: 10px;
@@ -406,7 +442,7 @@ jmexpander {
       }
       .chooseFragment{
         overflow-y: auto;
-        max-height: 250px;
+        max-height: 240px;
         background-color:#e6ffe7;
       }
       .eachFragment{
