--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18368,9 +18368,16 @@ body {
   margin: 0
 }
 
-.user-center .rules-notice .notice-content {
+.user-center .rules-notice{
   margin: 15px 25px;
-  margin-bottom: 5px
+  margin-bottom: 5px;
+}
+
+.notice-content {
+  margin: 15px 25px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .user-center .rules-notice .notice-content .notice-title {
@@ -18701,7 +18708,7 @@ body {
 
 .strength-recommend {
   margin-top: 35px;
-  height: 310px;
+/*  height: 310px;*/
   overflow: hidden
 }
 
@@ -20385,6 +20392,8 @@ body {
 }
 
 .work-list ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   list-style: none;
   padding: 0;
   margin: 0
@@ -20398,8 +20407,8 @@ body {
 .work-list ul li a.book-item-inner {
   color: #333;
   display: inline-block;
-  width: 130px;
-  height: 275px;
+  width: 192px;
+  height: 108px;
   text-decoration: none
 }
 
@@ -20407,7 +20416,7 @@ body {
   position: relative;
   text-align: center;
   font-size: 13px;
-  width: 110px;
+  width: 100%;
   margin: 15px auto;
   display: block;
   height: 34px;
@@ -20417,8 +20426,8 @@ body {
 
 .work-list ul li a.book-item-inner .cover {
   position: relative;
-  width: 130px;
-  height: 195px;
+  width: 192px;
+  height: 108px;
   background-color: #999
 }
 
@@ -20429,25 +20438,25 @@ body {
 }
 
 .work-list ul li a.book-item-inner .cover .mask {
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   z-index: 2;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  transition: all .2s;
+  /*  transition: all .2s;
   background-color: #fff;
-  box-shadow: 0 0 10px #e7e7e7
+  box-shadow: 0 0 10px #e7e7e7*/
 }
 
 .work-list ul li a.book-item-inner .cover .mask .mask-avatar {
   position: relative;
   display: block;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   border: 2px solid #666;
-  margin: 12px auto;
+  margin: 6px auto;
   border-radius: 50%
 }
 
@@ -20469,20 +20478,26 @@ body {
 }
 
 .work-list ul li a.book-item-inner .cover .mask .mask-detail>p {
-  width: 100px;
   line-height: 13px;
   font-size: 12px;
   color: #666;
-  margin: 5px auto;
+  margin: 5px 5px;
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap
+  white-space: nowrap;
+  display: inline-block;
 }
 
-.work-list ul li a.book-item-inner:hover .mask {
+.work-list ul li a.book-item-inner:hover .cover {
   opacity: .9;
   transform: scale(1.1)
+}
+
+.mask-detail {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .work-list ul li:last-of-type {
@@ -20732,6 +20747,15 @@ body {
     background-size: 116px 21px;
     background-position: inherit
   }
+}
+
+.update-headline .update-headline-icon{
+  align-self:center;
+  display:block;
+  width:116px;
+  height:21px;
+/*  background:url(../image/css_sprites-right.4f6a2ad.png) -10px -10px;*/
+  background-repeat:no-repeat
 }
 
 .wrapper {
