2023-6-28 首页推荐、轮播图、排行榜

--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18731,7 +18731,7 @@ body {
   display: block;
   width: 180px;
   height: 32px;
-
+  /*background-image:url(../image/css_sprites-left.a8d0cc9.png);*/
   background-position: -10px -10px;
   background-repeat: no-repeat
 }
