--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -20070,7 +20070,7 @@ body {
 }
 
 .update-time {
-  width: 100px
+  width: 100%
 }
 
 .ranking-zoom .update-list a.bookup-card .book-detail .split {
@@ -20440,16 +20440,16 @@ body {
 }
 
 .work-list ul li a.book-item-inner .cover .mask {
-  opacity: 1;
+  opacity: 0;
   position: absolute;
   z-index: 2;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  /*  transition: all .2s;
-  background-color: #fff;
-  box-shadow: 0 0 10px #e7e7e7*/
+  transition: opacity .2s;
+  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px #e7e7e7
 }
 
 .work-list ul li a.book-item-inner .cover .mask .mask-avatar {
@@ -20481,8 +20481,8 @@ body {
 
 .work-list ul li a.book-item-inner .cover .mask .mask-detail>p {
   line-height: 13px;
-  font-size: 12px;
-  color: #666;
+  font-size: 16px;
+  color: #fff;
   margin: 5px 5px;
   text-align: center;
   overflow: hidden;
@@ -20491,15 +20491,38 @@ body {
   display: inline-block;
 }
 
-.work-list ul li a.book-item-inner:hover .cover {
-  opacity: .9;
-  transform: scale(1.1)
+.work-list ul li a.book-item-inner:hover .mask {
+  opacity: 1;
+}
+
+.work-list ul li a.book-item-inner:hover .mask-detail {
+  transform: scale(1.1);
 }
 
 .mask-detail {
+  opacity: 1;
+  transition: all .2s;
   position: absolute;
   bottom: 0;
   right: 0;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.mask .mask-detail>.icon1{
+  width:20px;
+  height:20px;
+  background:url(../../assets/liked.png) no-repeat;
+  background-size: cover;
+}
+
+.mask .mask-detail>.icon2{
+  width:20px;
+  height:20px;
+  background:url(../../assets/colloection.png) no-repeat;
+  background-size: cover;
 }
 
 .work-list ul li:last-of-type {
@@ -20751,6 +20774,11 @@ body {
   }
 }
 
+.update-headline{
+  display:flex;
+  height:32px;
+}
+
 .update-headline .update-headline-icon{
   align-self:center;
   display:block;
@@ -20758,6 +20786,41 @@ body {
   height:21px;
 /*  background:url(../image/css_sprites-right.4f6a2ad.png) -10px -10px;*/
   background-repeat:no-repeat
+}
+
+.update-headline-text{
+  align-self:center;
+  margin-left:10px;
+  font-size:14px;
+  color:#999
+}
+
+.update-list{
+  padding-top:13px
+}
+
+.update-list a.book-card{
+  display:block;
+  text-decoration:none;
+  position:relative;
+  margin-bottom:11px;
+  padding-left:15px;
+  color:#333
+}
+
+.update-list a.book-card .book-name{
+  font-size:14px;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  transition:all .2s
+}
+
+.update-list a.book-card .book-detail{
+  display:flex;
+  margin-top:5px;
+  font-size:12px;
+  color:#999
 }
 
 .wrapper {
