--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -78,6 +78,7 @@ jmexpander {
   height: 100vh;
   z-index: 998;
   background-color: rgba(251, 245, 224);
+  //background-image: url("../../../image/sakura.jpg");
 
   &.full {
     position: fixed;
