--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18750,7 +18750,7 @@ body {
   border:none;
   width:26px;
   height:26px;
-  background:url(../../assets/refresh.png) no-repeat;
+  background:url(../image/refresh.png) no-repeat;
   background-size: cover;
   margin-right: 15px;
 }
@@ -20559,14 +20559,14 @@ body {
 .mask .mask-detail>.icon1{
   width:20px;
   height:20px;
-  background:url(../../assets/liked.png) no-repeat;
+  background:url(../image/liked.png) no-repeat;
   background-size: cover;
 }
 
 .mask .mask-detail>.icon2{
   width:20px;
   height:20px;
-  background:url(../../assets/colloection.png) no-repeat;
+  background:url(../image/colloection.png) no-repeat;
   background-size: cover;
 }
 
