2023-7-2 搜索功能完善

--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -20468,7 +20468,8 @@ body {
   position: relative;
   width: 160px;
   height: 225px;
-  background-color: #999
+  background-color: #999;
+  box-shadow: 0 3px 12px 0 hsla(0, 0%, 60%, 0.44);
 }
 
 .hot-container .work-list ul li a.book-item-inner .cover {
