--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18375,6 +18375,12 @@ body {
   margin-right: 5px;
 }
 
+.button-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
 .notice-content {
   margin: 5px 0;
 /*  display: flex;
