--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18300,7 +18300,6 @@ body {
 .user-center .rules-notice {
 /*  border: 1px solid #eee;
   border-radius: 10px;*/
-  height: 240px
 }
 
 @media (max-width: 1399px) {
@@ -18378,6 +18377,15 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  margin: 12px 0;
+}
+
+.button-new-story {
+  width: 100%;
+  height: 75px;
+  margin: 5px 0;
+  font-size: 18px;
+  flex: 1;
 }
 
 .notice-content {
