--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -18374,18 +18374,42 @@ body {
 }
 
 .button-container {
+  --button-width: 100%;
   width: 100%;
   height: 100%;
   display: flex;
   margin: 12px 0;
 }
 
-.button-new-story {
+.button-new-story1 {
   width: 100%;
   height: 75px;
   margin: 5px 0;
   font-size: 18px;
+  color: white;
   flex: 1;
+  background: url(https://img1.ali213.net/glpic/2021/03/15/584_20210315104023473.jpg) no-repeat;
+}
+
+.button-new-story2 {
+  width: 100%;
+  height: 75px;
+  margin: 5px 0;
+  font-size: 18px;
+  color: white;
+  flex: 1;
+  background: url(https://img1.ali213.net/glpic/2021/03/15/584_20210315104023473.jpg) -278px 0 no-repeat;
+}
+
+.button-new-story3 {
+  width: 100%;
+  height: 75px;
+  margin: 5px 0;
+  font-size: 18px;
+  color: white;
+  flex: 1;
+  background: url(https://img1.ali213.net/glpic/2021/03/15/584_20210315104023473.jpg) 0 -75px no-repeat;
+  background-size: cover;
 }
 
 .notice-content {
